<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/name"
                android:text="@string/textnombre"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/nombre"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/hintnombre"
                android:inputType="text"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/apellido"
                android:text="@string/textapellido"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/apellido"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="text"
                android:hint="@string/hintapellido"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/web"
                android:text="@string/textweb"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/web"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="text"
                android:hint="@string/hintweb"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/telefono"
                android:text="@string/texttelefono"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <EditText
                android:id="@+id/telefono"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="number"
                android:hint="@string/hinttelefono"
                android:gravity="center"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/botonera1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnMostrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/colorGreenB"
            android:textColor="@color/colorWhiteB"
            android:text="@string/btnMostrar"
            android:onClick="goToSecondActivity"/>


        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnBorrar"
            android:background="@color/colorRedB"
            android:textColor="@color/colorWhiteB"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="clearMessage"/>

     </LinearLayout>

</LinearLayout>